--- a/luci-app-openclash/luasrc/view/openclash/toolbar_show.htm
+++ b/luci-app-openclash/luasrc/view/openclash/toolbar_show.htm
@@ -71,10 +71,10 @@
 			XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "switch_config")%>', {config_name: config_name.value}, function(x, status) {
 				if (x && x.status == 200) {
     			btn.disabled = false;
-    			alert(config_name.value + ' <%:switching succeeded!%>')
+    			alert(' <%:Config File%>: ' + config_name.value + ' <%:switching succeeded!%>')
 				}
 				else {
-					alert(config_name.value + ' <%:switching failed!%>')
+					alert(' <%:Config File%>: ' + config_name.value + ' <%:switching failed!%>')
 				}
 			});
 			return false;
