--- a/luci-app-openclash/luasrc/view/openclash/toolbar_show.htm
+++ b/luci-app-openclash/luasrc/view/openclash/toolbar_show.htm
@@ -18,50 +18,53 @@
 </div>
 
 <script type="text/javascript">//<![CDATA[
-	var config_name = document.getElementById('cfg_name');
-	var tool_label = document.getElementById('tool_label');
-	var header1 = document.getElementsByClassName("tabmenu-item-log ")[0];
-	var header2 = document.getElementsByClassName("tabmenu-item-client ")[0];
-	var header3 = document.getElementsByClassName("tabmenu-item-config ")[0];
+
+		var config_name = document.getElementById('cfg_name');
+		var tool_label = document.getElementById('tool_label');
+		setTimeout("get_header()",100);
+
+		if (tool_label.style.display != "none") {
+			XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "config_name")%>', null, function(x, status) {
+				if (x && x.status == 200 && status.config_name != "") {
+					for(var i in status.config_name){
+     	 	  config_name.options.add(new Option(status.config_name[i].name,status.config_name[i].name));
+    			}
+    			if (status.config_path != "") {
+    				config_name.value = status.config_path;
+    			}
+    			else
+    			{
+    				config_name.options.add(new Option("<%:Not Select%>",""));
+    				config_name.value = "";
+    			}
+				}
+				else if (x && x.status == 200 && status.config_path != "") {
+					config_name.options.add(new Option(status.config_path,status.config_path));
+					config_name.value = status.config_path;
+				}
+				else {
+					tool_label.style.display = "none";
+				}
+			});
+		};
 	
-	if (header1 && header2.className != "tabmenu-item-client active" && header3.className != "tabmenu-item-config active") {
-		insertAfter(tool_label,header1);
+	function get_header() {
+		var header = document.getElementsByClassName("tabmenu-item-log ")[0];
+		if (header) {
+			insertAfter(tool_label,header);
+		}
+		else {
+			setTimeout("get_header()",100);
+		}
 	}
-	else {
-		tool_label.style.display = "none";
-	}
-	
-	if (tool_label.style.display != "none") {
-		XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "config_name")%>', null, function(x, status) {
-			if (x && x.status == 200 && status.config_name != "") {
-				for(var i in status.config_name){
-      	  config_name.options.add(new Option(status.config_name[i].name,status.config_name[i].name));
-    		}
-    		if (status.config_path != "") {
-    			config_name.value = status.config_path;
-    		}
-    		else
-    		{
-    			config_name.options.add(new Option("<%:Not Select%>",""));
-    			config_name.value = "";
-    		}
-			}
-			else if (x && x.status == 200 && status.config_path != "") {
-				config_name.options.add(new Option(status.config_path,status.config_path));
-				config_name.value = status.config_path;
-			}
-			else {
-				tool_label.style.display = "none";
-			}
-		});
-	}
-	
-	function insertAfter( newElement, targetElement ){
+		
+	function insertAfter(newElement, targetElement) {
     var parent = targetElement.parentNode;
-    if( parent.lastChild == targetElement ){
-        parent.appendChild( newElement, targetElement ); 
-    }else{ 
-        parent.insertBefore( newElement, targetElement.nextSibling );
+    if(parent.lastChild == targetElement) {
+        parent.appendChild(newElement, targetElement); 
+    }
+    else {
+        parent.insertBefore(newElement, targetElement.nextSibling);
     };
 	};
 	
@@ -79,6 +82,14 @@
 				}
 			});
 			return false;
+		}
+	}
+	
+	function winOpen(url)
+	{
+		var winOpen = window.open(url);
+		if(winOpen == null || typeof(winOpen) == 'undefined'){
+			window.location.href=url;
 		}
 	}
 //]]></script>
