chore: fix style

--- a/luci-app-openclash/luasrc/view/openclash/toolbar_show.htm
+++ b/luci-app-openclash/luasrc/view/openclash/toolbar_show.htm
@@ -21,7 +21,33 @@
 
 		var config_name = document.getElementById('cfg_name');
 		var tool_label = document.getElementById('tool_label');
+		var Commit = document.getElementById('cbi-table-1-Commit');
+		var Apply = document.getElementById('cbi-table-1-Apply');
+		var Load_Config = document.getElementById('cbi-table-1-Load_Config');
+		var Delete_Unused_Servers = document.getElementById('cbi-table-1-Delete_Unused_Servers');
+		var Delete_Servers = document.getElementById('cbi-table-1-Delete_Servers');
+		var Delete_Proxy_Provider = document.getElementById('cbi-table-1-Delete_Proxy_Provider');
+		var Delete_Groups = document.getElementById('cbi-table-1-Delete_Groups');
+		var rule_mg = document.getElementById('cbi-table-1-rule_mg');
+		var pro_mg = document.getElementById('cbi-table-1-pro_mg');
+    
 		setTimeout("get_header()",100);
+		
+		if (Commit) {
+			Commit.style.textAlign="center";
+    	Apply.style.textAlign="center";
+		}
+		if (Load_Config) {
+    	Load_Config.style.textAlign="center";
+    	Delete_Unused_Servers.style.textAlign="center";
+    	Delete_Servers.style.textAlign="center";
+    	Delete_Proxy_Provider.style.textAlign="center";
+    	Delete_Groups.style.textAlign="center";
+		}
+		if (rule_mg) {
+    	rule_mg.style.textAlign="center";
+    	pro_mg.style.textAlign="center";
+		}
 
 		if (tool_label.style.display != "none") {
 			XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "config_name")%>', null, function(x, status) {
