--- a/luci-app-openclash/luasrc/view/openclash/status.htm
+++ b/luci-app-openclash/luasrc/view/openclash/status.htm
@@ -59,8 +59,6 @@
 				<label for="normal" id="run_normal"><%:Compatible%></label>
 				<input type="radio" id="tun" name="radios-ru" value="-tun" onclick="return switch_run_mode(this.value)"/>
 				<label for="tun"><%:TUN%></label>
-				<input type="radio" id="game" name="radios-ru" value="-vpn" onclick="return switch_run_mode(this.value)"/>
-				<label for="game"><%:Game%></label>
 				<input type="radio" id="mix" name="radios-ru" value="-mix" onclick="return switch_run_mode(this.value)"/>
 				<label for="mix"><%:Mix%></label>
 			</span></td><td width="25%"><%:Control Panel Login Port%></td><td width="25%" align="left" id="_dapo"><%:Collecting data...%></td></tr>
@@ -345,12 +343,12 @@
 	function get_run_mode() {
 		XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "get_run_mode")%>', null, function(x, status) {
 			if (x && x.status == 200 && status.mode) {
-				if (status.mode == "fake-ip" || status.mode == "fake-ip-tun" || status.mode == "fake-ip-vpn" || status.mode == "fake-ip-mix")
+				if (status.mode == "fake-ip" || status.mode == "fake-ip-tun" || status.mode == "fake-ip-mix")
 				{
 			   	mode.innerHTML = status.clash ? "<b><font color=green><%:Fake-IP%></font></b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;" : '<b><font color=red><%:Not Running%></font></b>';
 			   	radio_run_normal.innerHTML = "<%:Enhance%>"
 				}
-				else if (status.mode == "redir-host" || status.mode == "redir-host-tun" || status.mode == "redir-host-vpn" || status.mode == "redir-host-mix")
+				else if (status.mode == "redir-host" || status.mode == "redir-host-tun" ||  status.mode == "redir-host-mix")
 				{
 			  	 mode.innerHTML = status.clash ? "<b><font color=green><%:Redir-Host%></font></b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;" : '<b><font color=red><%:Not Running%></font></b>';
 			  	 radio_run_normal.innerHTML = "<%:Compatible%>"
