--- a/luci-app-openclash/luasrc/view/openclash/status.htm
+++ b/luci-app-openclash/luasrc/view/openclash/status.htm
@@ -773,8 +773,12 @@
 	});
 	XHR.poll(1, '<%=luci.dispatcher.build_url("admin", "services", "openclash", "startlog")%>', null, function(x, status) {
 	  if ( x && x.status == 200 ) {
-		   if ( status.startlog != "\n" && status.startlog != "" ) {
-	     startlog.innerHTML = '<b><font color="green">'+status.startlog+'</font></b>';
+	     if ( status.startlog.match("level=fatal") ) {
+	        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "del_start_log")%>', null, function(x) {});
+	        alert('<%:OpenClash Start Failed%> :\n\n' + status.startlog.split('msg=')[1]);
+	     }
+		   else if ( status.startlog != "\n" && status.startlog != "" ) {
+	        startlog.innerHTML = '<b><font color="green">'+status.startlog+'</font></b>';
 	     }
 	  }
 	});
