chore: remove translation for release branch option

--- a/luci-app-openclash/luasrc/view/openclash/update.htm
+++ b/luci-app-openclash/luasrc/view/openclash/update.htm
@@ -24,8 +24,8 @@
 	  	</select></td>
 	  	<td width="25%"><%:Release Branch Selected%></td>
 	  	<td width="25%" align="left"><select id="RELEASE_BRANCH">
-	  		<option value="master"><%:Master%></option>
-				<option value="dev"><%:Developer%></option>
+	  		<option value="master">Master</option>
+				<option value="dev">Developer</option>
 	  	</select></td>
 	  	</tr>
 		<tr>
