--- a/luci-app-openclash/luasrc/view/openclash/dlercloud.htm
+++ b/luci-app-openclash/luasrc/view/openclash/dlercloud.htm
@@ -136,10 +136,9 @@
 .card .general .dler-result {
   color: #444;
   font-size:16px;
-  transform: translateX(-10%);
   white-space: nowrap;
   display: inline-block;
-  width: 55%;
+  width: 50%;
   overflow: hidden;
   text-overflow: ellipsis;
   vertical-align:bottom;
@@ -151,10 +150,9 @@
 .card .general .dler-result2 {
   color: #444;
   font-size:16px;
-  transform: translateX(-5%);
   white-space: nowrap;
   display: inline-block;
-  width: 55%;
+  width: 50%;
   overflow: hidden;
   text-overflow: ellipsis;
   vertical-align:bottom;
@@ -175,8 +173,6 @@
   font-weight: bold;
   display: inline-block;
   overflow: hidden;
-  margin-top: 20px;
-  margin-left: 10px;
   -webkit-appearance:button;
 }
 
@@ -213,42 +209,42 @@
     <div class="general">
       <h1 id="dler-plan" ></h1>
       	<div class="dler-info">
-      		<div style="width: 40%">
-            <p>
+      		<div style="width: 35%">
+            <p style="margin: 10px -28% 10px 28%">
                 <span class="dler-title"><%:Plan Expiration Time%>:</span><span class="dler-result" id="dler-plantime"><%:Collecting data...%></span>
             </p>
-            <p>
+            <p style="margin: 10px -28% 10px 28%">
                 <span class="dler-title"><%:Account Balances%>:</span><span class="dler-result" id="dler-money"><%:Collecting data...%></span>
             </p>
-            <p>
+            <p style="margin: 10px -28% 10px 28%">
                 <span class="dler-title"><%:Aff Balances%>:</span><span class="dler-result" id="dler-affmoney"><%:Collecting data...%></span>
             </p>
-            <p>
+            <p style="margin: 10px -28% 10px 28%">
                 <span class="dler-title"><%:Account Integral%>:</span><span class="dler-result" id="dler-integral"><%:Collecting data...%></span>
             </p>
         	</div>
-        	<div style="width: 40%">
-            <p>
+        	<div style="width: 35%">
+            <p style="margin: 10px -28% 10px 28%">
                 <span class="dler-title"><%:Today Used%>:</span><span class="dler-result2" id="dler-today-used"><%:Collecting data...%></span>
             </p>
-            <p>
+            <p style="margin: 10px -28% 10px 28%">
                 <span class="dler-title"><%:Plan Used%>:</span><span class="dler-result2" id="dler-used"><%:Collecting data...%></span>
             </p>
-            <p>
+            <p style="margin: 10px -28% 10px 28%">
                 <span class="dler-title"><%:Plan Unused%>:</span><span class="dler-result2" id="dler-unused"><%:Collecting data...%></span>
             </p>
-            <p>
+            <p style="margin: 10px -28% 10px 28%">
                 <span class="dler-title"><%:Plan Traffic%>:</span><span class="dler-result2" id="dler-traffic"><%:Collecting data...%></span>
             </p>
         	</div>
         	<div style="width: 30%; text-align:center">
-        		<p>
+        		<p style="margin: 30px 0 10px 35%">
         			<input type="button" class="btn" value="<%:Checkin%>" onclick="return dler_checkin_btn(this)"
         		</p>
         	</div>
         </div>
     		<div>
-       	 <p class="more">Powered by <a onclick="return web_dler()" href="javascript:void(0);">dlercloud.com</a></p>
+       	 <p class="more">Powered by <a style="text-decoration: none; color: #666" onclick="return web_dler()" href="javascript:void(0);">dlercloud.com</a></p>
     		</div>
       </div>
     </div>
