--- a/luci-app-openclash/luasrc/view/openclash/dlercloud.htm
+++ b/luci-app-openclash/luasrc/view/openclash/dlercloud.htm
@@ -138,7 +138,7 @@
   font-size:16px;
   white-space: nowrap;
   display: inline-block;
-  width: 50%;
+  width: 55%;
   overflow: hidden;
   text-overflow: ellipsis;
   vertical-align:bottom;
@@ -152,7 +152,7 @@
   font-size:16px;
   white-space: nowrap;
   display: inline-block;
-  width: 50%;
+  width: 55%;
   overflow: hidden;
   text-overflow: ellipsis;
   vertical-align:bottom;
@@ -179,7 +179,7 @@
 .card .general .more {
   float: right;
   top: 85%;
-  right: 2%;
+  right: 20px;
   font-size: 15px;
   height: 15%;
   position: absolute;
@@ -210,16 +210,16 @@
       <h1 id="dler-plan" ></h1>
       	<div class="dler-info">
       		<div style="width: 35%">
-            <p style="margin: 10px -28% 10px 28%">
+            <p style="margin: 10px -22% 10px 22%">
                 <span class="dler-title"><%:Plan Expiration Time%>:</span><span class="dler-result" id="dler-plantime"><%:Collecting data...%></span>
             </p>
-            <p style="margin: 10px -28% 10px 28%">
+            <p style="margin: 10px -22% 10px 22%">
                 <span class="dler-title"><%:Account Balances%>:</span><span class="dler-result" id="dler-money"><%:Collecting data...%></span>
             </p>
-            <p style="margin: 10px -28% 10px 28%">
+            <p style="margin: 10px -22% 10px 22%">
                 <span class="dler-title"><%:Aff Balances%>:</span><span class="dler-result" id="dler-affmoney"><%:Collecting data...%></span>
             </p>
-            <p style="margin: 10px -28% 10px 28%">
+            <p style="margin: 10px -22% 10px 22%">
                 <span class="dler-title"><%:Account Integral%>:</span><span class="dler-result" id="dler-integral"><%:Collecting data...%></span>
             </p>
         	</div>
@@ -238,7 +238,7 @@
             </p>
         	</div>
         	<div style="width: 30%; text-align:center">
-        		<p style="margin: 30px 0 10px 35%">
+        		<p style="margin: 30px 0 10px 39%">
         			<input type="button" class="btn" value="<%:Checkin%>" onclick="return dler_checkin_btn(this)"
         		</p>
         	</div>
