--- a/luci-app-openclash/luasrc/view/openclash/myip.htm
+++ b/luci-app-openclash/luasrc/view/openclash/myip.htm
@@ -153,7 +153,7 @@
         </div>
     </div>
     <div>
-        <p style="float: right; margin-top: 30px; font-size:15px; padding-right: 10px">Powered by <a style="text-decoration: none; color: #666" onclick="return ip_skk()" href="javascript:void(0);">ip.skk.moe</a></p>
+        <p style="float: right; margin: 5px 10px 10px 0; font-size:15px">Powered by <a style="text-decoration: none; color: #666" onclick="return ip_skk()" href="javascript:void(0);">ip.skk.moe</a></p>
     </div>
     </td></tr>
 	</table>
