--- a/luci-app-openclash/luasrc/view/openclash/sub_info_show.htm
+++ b/luci-app-openclash/luasrc/view/openclash/sub_info_show.htm
@@ -5,7 +5,7 @@
 	white-space: nowrap;
 	color: black;
 	font-size: 12px;
-	font-style: italic;
+	text-align: left;
 	margin-top: 5px;
 	opacity: 0;
 }
@@ -15,8 +15,8 @@
 	white-space: nowrap;
 	color: black;
 	font-size: 12px;
-	font-style: italic;
 	margin-top: 5px;
+	text-align: left;
 	-webkit-transition: all 1.5s;  
 	-moz-transition: all 1.5s;  
 	-ms-transition: all 1.5s;  
@@ -32,9 +32,7 @@
 	local val = self:cfgvalue(section)
 	local filename = fs.filename(val)
 	local idname = math.random(1000)..(string.match(filename, "[%w_]+") or "")
-	write(pcdata(val))
 %>
-<br/>
 	<div id='<%=idname%>' class="sub_tab"></div>
 </div>
 
@@ -54,7 +52,7 @@ function sub_info_get_<%=idname%>()
 		if (localStorage.getItem("<%=filename%>")) {
 			var save_info = JSON.parse(localStorage.getItem("<%=filename%>"));
 			document.getElementById('<%=idname%>').className = "sub_tab_show";
-			document.getElementById('<%=idname%>').innerHTML = "- <%:Plan Traffic%>" + ": " + "<span style=color:green>" + save_info.used + "</span> | <span style=color:green>" + save_info.total + "</span> - <%:Plan Expiration Time%>: " + "<span style=color:green>" + save_info.expire + "</span> -";
+			document.getElementById('<%=idname%>').innerHTML = "<%:Plan Traffic%>" + ": " + "<span style=color:green>" + save_info.used + "</span> | <span style=color:green>" + save_info.total + "</span> <br/> <%:Plan Expiration Time%>: " + "<span style=color:green>" + save_info.expire + "</span>";
 		}
 	}
 	
@@ -63,13 +61,17 @@ function sub_info_get_<%=idname%>()
 			localStorage.setItem("<%=filename%>",JSON.stringify(status));
 			new_sub_info_get_<%=idname%> = false;
 			document.getElementById('<%=idname%>').className = "sub_tab_show";
-			document.getElementById('<%=idname%>').innerHTML = "- <%:Plan Traffic%>" + ": " + "<span style=color:green>" + status.used + "</span> | <span style=color:green>" + status.total + "</span> - <%:Plan Expiration Time%>: " + "<span style=color:green>" + status.expire + "</span> -";
+			document.getElementById('<%=idname%>').innerHTML = "<%:Plan Traffic%>" + ": " + "<span style=color:green>" + status.used + "</span> | <span style=color:green>" + status.total + "</span> <br/> <%:Plan Expiration Time%>: " + "<span style=color:green>" + status.expire + "</span>";
 		}
 		else if ( x && x.status == 200 && status.sub_info == "No Sub Info Found" ) {
-			document.getElementById('<%=idname%>').style.display = "none";
-			document.getElementById('<%=idname%>').style.width = "0";
+			document.getElementById('<%=idname%>').className = "sub_tab_show";
+			document.getElementById('<%=idname%>').innerHTML = "<span><%:No Sub Info Found%></span>";
 			clearTimeout(s_<%=idname%>);
 			return
+		}
+		else {
+			document.getElementById('<%=idname%>').className = "sub_tab_show";
+			document.getElementById('<%=idname%>').innerHTML = "<span style=color:red><%:Sub Info Get Error%></span>";
 		};
 	});
 	
